refactor data dump

--- a/robintrack_analysis.ipynb
+++ b/robintrack_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,9 @@
     "import matplotlib.pyplot as plt \n",
     "import datetime\n",
     "import numpy as np \n",
+    "import shutil\n",
+    "import tarfile\n",
+    "from pathlib import Path\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "directory = os.fsencode('popularity_export')\n",
@@ -20,163 +23,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "def merge_rh_vol_w_barset(security,calc_profit = True,trend_window = 4,vol_thresh = 0,path = 'popularity_export/popularity_export'):\n",
-    "    rh_vol = pd.read_csv('{}/{}.csv'.format(path,security))\n",
-    "    rh_vol.index = pd.to_datetime(rh_vol['timestamp']).dt.date\n",
-    "    rh_vol.drop_duplicates(inplace=True,keep = 'first')\n",
-    "    rh_vol.drop('timestamp',axis =1,inplace=True)\n",
-    "    bars = api.polygon.historic_agg_v2(security,1,'day',_from= rh_vol.index[0],to=datetime.date.today()).df\n",
-    "    latest = api.polygon.historic_agg_v2(security,1,'minute',_from= datetime.date.today() - datetime.timedelta(days=5),to=datetime.date.today()).df.iloc[-1]\n",
-    "    bars = bars.append(latest)\n",
-    "    bars.iloc[-1]['volume'] = np.NaN\n",
-    "    bars.index = bars.index.date\n",
-    "    merged = bars.join(rh_vol.groupby('timestamp').max()['users_holding'])\n",
-    "    merged['rh_vol_pct'] = merged['users_holding']*100/merged['volume']\n",
-    "    merged['rh_action'] = merged['users_holding'].copy()*0\n",
-    "    rh_trend_up = ((merged['users_holding'] > merged['users_holding'].shift(1)).rolling(trend_window).sum() == trend_window)\n",
-    "    price_trend_down = ((merged['open'] < merged['open'].shift(1)).rolling(trend_window).sum() == trend_window)\n",
-    "    is_vol_significant = merged['rh_vol_pct'].shift(1) > vol_thresh\n",
-    "    merged['rh_action'][rh_trend_up & price_trend_down & is_vol_significant] = 1\n",
-    "    if calc_profit:\n",
-    "        merged['profit'] = merged['users_holding'].copy()*0\n",
-    "        merged['profit'][merged['rh_action'] == 1] = (merged['close'].shift(-trend_window) - merged['open'])/merged['open'] \n",
-    "    #print('{} traded {} times, total_profit_pct: {}'.format(security,len(merged[merged['rh_action'] == 1]),merged[merged['rh_action'] == 1]['profit'].sum()))\n",
-    "    return merged\n",
-    "\n",
-    "def normalize_merged(schema,df):\n",
-    "    blank_df = pd.DataFrame(0, index=schema.index, columns=list(schema))\n",
-    "    blank_df.update(df)\n",
-    "    return blank_df\n",
-    "\n",
-    "# asset = merge_rh_vol_w_barset('AMD')\n",
-    "# print(asset[asset['rh_action'] != 0])\n",
-    "# print(asset[asset['rh_action'] == 1]['profit'].sum())\n",
-    "# fig,ax = plt.subplots()\n",
-    "# ax.plot(asset['close'],color ='red')\n",
-    "# ax2 = ax.twinx()\n",
-    "# ax2.plot(asset['users_holding'])\n",
-    "# plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "def robintrack_strat(limit=100):    \n",
-    "    asset_data = {}\n",
-    "    standard = merge_rh_vol_w_barset('AMZN') # standard barset schema\n",
-    "    returns = pd.DataFrame(1, index=standard.index, columns=['returns','num_assets_traded']) \n",
-    "    returns['num_assets_traded'] -= 1 \n",
-    "    for filename in os.listdir(directory)[:limit]:\n",
-    "        security = os.fsdecode(filename).replace('.csv','')\n",
-    "        try:\n",
-    "            asset_returns = normalize_merged(standard,merge_rh_vol_w_barset(security))\n",
-    "        except: \n",
-    "            print('{} data not found'.format(security))\n",
-    "            continue\n",
-    "        returns['returns'] += asset_returns['profit']\n",
-    "        returns['num_assets_traded'] += asset_returns['rh_action']\n",
-    "        if asset_returns['profit'].sum() > 0: \n",
-    "            print('{} traded, net: {}, num trades: {}'.format(security,asset_returns['profit'].sum(),len(asset_returns[asset_returns['profit'] > 0])))\n",
-    "            \n",
-    "    returns['returns'][returns['num_assets_traded'] > 0] /= returns[returns['num_assets_traded'] > 0]['num_assets_traded']\n",
-    "    returns['cum_returns'] = returns['returns'].cumprod()\n",
-    "    return returns\n",
-    "\n",
-    "res = robintrack_strat()\n",
-    "fig,ax = plt.subplots()\n",
-    "ax.plot(res['cum_returns'],color ='red')\n",
-    "ax2 = ax.twinx()\n",
-    "ax2.plot(res['returns'].cumsum())\n",
-    "print(res)\n",
-    "print('cumulative return: {}%, APR: {}%, max_drawdown (approx): {}%, total trades: {}'.format((res['cum_returns'].iloc[-1]-1)*100,(np.sqrt(res['cum_returns'].iloc[-1])-1)*100,(1- res['cum_returns'].min())*100,res['num_assets_traded'].sum()))\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(res['num_assets_traded'])\n",
-    "print(res['num_assets_traded'].sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    }
-   ],
-   "source": [
-    "for filename in os.listdir(os.fsencode('popularity_export/popularity_export')):\n",
-    "    security = os.fsdecode(filename).replace('.csv','')\n",
-    "    if security in alpaca_universe:\n",
-    "        try:\n",
-    "            asset_returns = merge_rh_vol_w_barset(security)\n",
-    "            if asset_returns['rh_action'].iloc[-1] == 1:\n",
-    "                print('{} recommendation '.format(security))\n",
-    "                print(asset_returns.iloc[-1])\n",
-    "        except: \n",
-    "            #print('{} data not found'.format(security))\n",
-    "            pass\n",
-    "print('done')\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "asset = merge_rh_vol_w_barset('MDB')\n",
-    "print(asset)\n",
-    "print(asset[asset['rh_action'] == 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api.polygon.historic_agg_v2('PSM',1,'minute',_from= datetime.date.today() - datetime.timedelta(days=5),to=datetime.date.today()).df\n",
-    "print(api.polygon.last_quote('PSM'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.chrome.options import Options\n",
-    "import os\n",
-    "import shutil\n",
-    "import tarfile\n",
-    "from pathlib import Path\n",
-    "\n",
-    "\n",
     "# function to take care of downloading file\n",
     "def enable_download_headless(browser,download_dir):\n",
     "    browser.command_executor._commands[\"send_command\"] = (\"POST\", '/session/$sessionId/chromium/send_command')\n",
@@ -238,12 +88,114 @@
     "    shutil.move(dir_str + '/tmp/popularity_export',dir_str)\n",
     "    shutil.rmtree('popularity_export/tmp')\n",
     "    print('done')\n",
-    "    return 1\n"
+    "    return 1\n",
+    "\n",
+    "\n",
+    "def merge_rh_vol_w_barset(security,calc_profit = True,trend_window = 4,vol_thresh = 0,path = 'popularity_export/popularity_export'):\n",
+    "    rh_vol = pd.read_csv('{}/{}.csv'.format(path,security))\n",
+    "    rh_vol.index = pd.to_datetime(rh_vol['timestamp']).dt.date\n",
+    "    rh_vol.drop_duplicates(inplace=True,keep = 'first')\n",
+    "    rh_vol.drop('timestamp',axis =1,inplace=True)\n",
+    "    bars = api.polygon.historic_agg_v2(security,1,'day',_from= rh_vol.index[0],to=datetime.date.today()).df\n",
+    "    #latest = api.polygon.historic_agg_v2(security,1,'minute',_from= datetime.date.today() - datetime.timedelta(days=5),to=datetime.date.today()).df.iloc[-1]\n",
+    "    #bars = bars.append(latest)\n",
+    "    #bars.iloc[-1]['volume'] = np.NaN\n",
+    "    #bars.index = bars.index.date\n",
+    "    merged = bars.join(rh_vol.groupby('timestamp').max()['users_holding'])\n",
+    "    merged['rh_vol_pct'] = merged['users_holding']*100/merged['volume']\n",
+    "    merged['rh_action'] = merged['users_holding'].copy()*0\n",
+    "    rh_trend_up = ((merged['users_holding'] > merged['users_holding'].shift(1)).rolling(trend_window).sum() == trend_window)\n",
+    "    price_trend_down = ((merged['open'] < merged['open'].shift(1)).rolling(trend_window).sum() == trend_window)\n",
+    "    is_vol_significant = merged['rh_vol_pct'].shift(1) > vol_thresh\n",
+    "    merged['rh_action'][rh_trend_up & price_trend_down & is_vol_significant] = 1\n",
+    "    if calc_profit:\n",
+    "        merged['profit'] = merged['users_holding'].copy()*0\n",
+    "        merged['profit'][merged['rh_action'] == 1] = (merged['close'].shift(-trend_window) - merged['open'])/merged['open'] \n",
+    "    #print('{} traded {} times, total_profit_pct: {}'.format(security,len(merged[merged['rh_action'] == 1]),merged[merged['rh_action'] == 1]['profit'].sum()))\n",
+    "    return merged\n",
+    "\n",
+    "def normalize_merged(schema,df):\n",
+    "    blank_df = pd.DataFrame(0, index=schema.index, columns=list(schema))\n",
+    "    blank_df.update(df)\n",
+    "    return blank_df\n",
+    "\n",
+    "\n",
+    "def find_entry_points():\n",
+    "    assets_to_buy = []\n",
+    "    for filename in os.listdir(os.fsencode('popularity_export/popularity_export')):\n",
+    "        security = os.fsdecode(filename).replace('.csv','')\n",
+    "        if security in alpaca_universe:\n",
+    "            try:\n",
+    "                asset_returns = merge_rh_vol_w_barset(security)\n",
+    "                if asset_returns['rh_action'].iloc[-1] == 1:\n",
+    "                    print('{} recommendation '.format(security))\n",
+    "                    print(asset_returns.iloc[-1])\n",
+    "                    assets_to_buy.append(security)\n",
+    "            except: \n",
+    "                #print('{} data not found'.format(security))\n",
+    "                pass\n",
+    "    pos_value = float(api.get_account().cash)/len(assets_to_buy)\n",
+    "    for asset in assets_to_buy:\n",
+    "        asset_price = float(api.polygon.last_quote(asset).askprice)\n",
+    "        order_size = int(max(1,pos_value/asset_price))\n",
+    "        api.submit_order(symbol=asset,side='buy',type='market',qty=order_size,time_in_force='day')\n",
+    "        print('bought {} '.format(asset))\n",
+    "    print('done')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def robintrack_strat(limit=100):    \n",
+    "    asset_data = {}\n",
+    "    standard = merge_rh_vol_w_barset('AMZN') # standard barset schema\n",
+    "    returns = pd.DataFrame(1, index=standard.index, columns=['returns','num_assets_traded']) \n",
+    "    returns['num_assets_traded'] -= 1 \n",
+    "    for filename in os.listdir(directory)[:limit]:\n",
+    "        security = os.fsdecode(filename).replace('.csv','')\n",
+    "        try:\n",
+    "            asset_returns = normalize_merged(standard,merge_rh_vol_w_barset(security))\n",
+    "        except: \n",
+    "            print('{} data not found'.format(security))\n",
+    "            continue\n",
+    "        returns['returns'] += asset_returns['profit']\n",
+    "        returns['num_assets_traded'] += asset_returns['rh_action']\n",
+    "        if asset_returns['profit'].sum() > 0: \n",
+    "            print('{} traded, net: {}, num trades: {}'.format(security,asset_returns['profit'].sum(),len(asset_returns[asset_returns['profit'] > 0])))\n",
+    "            \n",
+    "    returns['returns'][returns['num_assets_traded'] > 0] /= returns[returns['num_assets_traded'] > 0]['num_assets_traded']\n",
+    "    returns['cum_returns'] = returns['returns'].cumprod()\n",
+    "    return returns\n",
+    "\n",
+    "res = robintrack_strat()\n",
+    "fig,ax = plt.subplots()\n",
+    "ax.plot(res['cum_returns'],color ='red')\n",
+    "ax2 = ax.twinx()\n",
+    "ax2.plot(res['returns'].cumsum())\n",
+    "print(res)\n",
+    "print('cumulative return: {}%, APR: {}%, max_drawdown (approx): {}%, total trades: {}'.format((res['cum_returns'].iloc[-1]-1)*100,(np.sqrt(res['cum_returns'].iloc[-1])-1)*100,(1- res['cum_returns'].min())*100,res['num_assets_traded'].sum()))\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(res['num_assets_traded'])\n",
+    "print(res['num_assets_traded'].sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -252,138 +204,33 @@
      "text": [
       "done\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dl_robintrack_data()"
+    "dl_robintrack_data()\n",
+    "find_entry_points()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>users_holding</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2018-05-02 04:53:46</td>\n",
-       "      <td>150785</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2018-05-02 06:38:58</td>\n",
-       "      <td>150785</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2018-05-03 00:35:25</td>\n",
-       "      <td>145510</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2018-05-03 06:33:53</td>\n",
-       "      <td>145510</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2018-05-03 06:48:56</td>\n",
-       "      <td>145510</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17777</th>\n",
-       "      <td>2020-06-17 03:47:53</td>\n",
-       "      <td>436450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17778</th>\n",
-       "      <td>2020-06-17 04:47:24</td>\n",
-       "      <td>436450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17779</th>\n",
-       "      <td>2020-06-17 05:47:21</td>\n",
-       "      <td>436450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17780</th>\n",
-       "      <td>2020-06-17 06:47:42</td>\n",
-       "      <td>436395</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17781</th>\n",
-       "      <td>2020-06-17 07:47:18</td>\n",
-       "      <td>436395</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>17782 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 timestamp  users_holding\n",
-       "0      2018-05-02 04:53:46         150785\n",
-       "1      2018-05-02 06:38:58         150785\n",
-       "2      2018-05-03 00:35:25         145510\n",
-       "3      2018-05-03 06:33:53         145510\n",
-       "4      2018-05-03 06:48:56         145510\n",
-       "...                    ...            ...\n",
-       "17777  2020-06-17 03:47:53         436450\n",
-       "17778  2020-06-17 04:47:24         436450\n",
-       "17779  2020-06-17 05:47:21         436450\n",
-       "17780  2020-06-17 06:47:42         436395\n",
-       "17781  2020-06-17 07:47:18         436395\n",
-       "\n",
-       "[17782 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.read_csv('popularity_export/popularity_export/AAPL.csv')"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
